--- a/responsive-web-design/build-a-personal-portfolio-webpage/package.json
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/package.json
@@ -13,9 +13,9 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.1.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-minify-html": "^1.0.6",
     "gulp-terser": "^1.2.0"
   },
   "scripts": {
