--- a/responsive-web-design/build-a-survey-form/package.json
+++ b/responsive-web-design/build-a-survey-form/package.json
@@ -12,8 +12,8 @@
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-minify-html": "^1.0.6",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-terser": "^1.2.0"
   },
   "scripts": {
