--- a/responsive-web-design/build-a-survey-form/package.json
+++ b/responsive-web-design/build-a-survey-form/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "build-a-personal-portfolio-webpage",
+  "name": "build-a-survey-form",
   "version": "1.0.0",
-  "repository": "https://github.com/asteffey/freecodecamp/tree/master/responsive-web-design/build-a-personal-portfolio-webpage",
+  "repository": "https://github.com/asteffey/freecodecamp/tree/master/responsive-web-design/build-a-survey-form",
   "author": "Andrew Steffey",
   "license": "MIT",
   "private": true,
@@ -12,10 +12,8 @@
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.2.0",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^6.1.0",
     "gulp-terser": "^1.2.0"
   },
   "scripts": {
@@ -23,6 +21,6 @@
     "clean": "gulp clean",
     "build": "gulp build",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -a -d dist -e build-a-personal-portfolio-webpage"
+    "deploy": "gh-pages -a -d dist -e build-a-survey-form"
   }
 }
