--- a/responsive-web-design/build-a-tribute-page/package.json
+++ b/responsive-web-design/build-a-tribute-page/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "build-a-personal-portfolio-webpage",
+  "name": "build-a-tribute-page",
   "version": "1.0.0",
-  "repository": "https://github.com/asteffey/freecodecamp/tree/master/responsive-web-design/build-a-personal-portfolio-webpage",
+  "repository": "https://github.com/asteffey/freecodecamp/tree/master/responsive-web-design/build-a-tribute-page",
   "author": "Andrew Steffey",
   "license": "MIT",
   "private": true,
@@ -11,18 +11,14 @@
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.2.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^6.1.0",
-    "gulp-terser": "^1.2.0"
+    "gulp-htmlmin": "^5.0.1"
   },
   "scripts": {
     "start": "gulp start",
     "clean": "gulp clean",
     "build": "gulp build",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -a -d dist -e build-a-personal-portfolio-webpage"
+    "deploy": "gh-pages -a -d dist -e build-a-tribute-page"
   }
 }
