--- a/root/package.json
+++ b/root/package.json
@@ -13,7 +13,7 @@
     "gh-pages": "^2.1.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-minify-html": "^1.0.6",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-terser": "^1.2.0",
     "gulp-uglify": "^3.0.2"
   },
